# dedupe_it

./: LICENSE  README.md
backend/: .gitignore  Dockerfile  README.md  justfile  pyproject.toml
backend/src/: main.py
backend/src/dedupe_it/: __init__.py  comparator.py  config.py  grouper.py  llm.py  logger.py  merger.py  models.py  service.py  utils.py  vector_store.py
frontend/: README.md  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/public/samples/: companies.csv  people.csv  products.csv
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/: DedupeProgress.tsx  DedupeSummary.tsx  DedupeTable.tsx  DropUpload.tsx  StatusChip.tsx  TopBar.tsx  UpgradeModal.tsx
frontend/src/hooks/: useProgress.ts
frontend/src/lib/: csvExport.ts  dedupeService.ts  models.ts  sampleData.ts
frontend/src/routes/: __root.tsx  dedupe.tsx  index.tsx
frontend/src/store/: DataContext.tsx
